[gd_scene load_steps=64 format=3 uid="uid://c2pvdotumpbmx"]

[ext_resource type="Texture2D" uid="uid://c47mt42pdnrmo" path="res://Enemies/Bosses/GeodeBoss/assets/Body.webp" id="1_1nh5t"]
[ext_resource type="Script" uid="uid://csbo7bwfromq6" path="res://Enemies/Bosses/GeodeBoss/GeodeBoss.gd" id="1_wwxrc"]
[ext_resource type="Texture2D" uid="uid://42mbtb8vie6d" path="res://Enemies/Bosses/assets/485.png" id="2_2fuaw"]
[ext_resource type="Texture2D" uid="uid://d1s3x4obbd6f2" path="res://Enemies/Bosses/GeodeBoss/assets/Core.webp" id="2_wwxrc"]
[ext_resource type="PackedScene" uid="uid://c0le87t8h8pka" path="res://Enemies/Bosses/boss_damage_area.tscn" id="3_wwxrc"]
[ext_resource type="AudioStream" uid="uid://ckbl3kr7q65xo" path="res://Enemies/Bosses/assets/explosion.ogg" id="4_40yy1"]
[ext_resource type="Texture2D" uid="uid://bj0kcwil6vv2f" path="res://Enemies/Bosses/GeodeBoss/assets/phase1explosion.webp" id="5_2ktla"]
[ext_resource type="AudioStream" uid="uid://v2aak2ajf3lb" path="res://Enemies/Bosses/GeodeBoss/assets/leaser_shoot.ogg" id="8_v2p4m"]
[ext_resource type="AudioStream" uid="uid://dicihj76dxnqe" path="res://Enemies/Bosses/GeodeBoss/assets/rock_shot.ogg" id="9_2ktla"]
[ext_resource type="AudioStream" uid="uid://c448a8lbalxlu" path="res://Enemies/Bosses/GeodeBoss/assets/TransitioningSound.ogg" id="10_m11f0"]
[ext_resource type="AudioStream" uid="uid://dtbdd32v0f5uq" path="res://Enemies/Bosses/GeodeBoss/assets/TransitionSound.ogg" id="11_1ldon"]

[sub_resource type="Animation" id="Animation_wwxrc"]
resource_name = "Phase One"
length = 8.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(150, 500), Vector2(520, 500), Vector2(900, 500)]
}

[sub_resource type="CircleShape2D" id="CircleShape2D_m11f0"]
radius = 248.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wcg6j"]
radius = 250.0

[sub_resource type="Animation" id="Animation_40yy1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(520, -360)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite/Body:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprite/Core:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CircleShape2D_m11f0")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BossDamageArea/CollisionShape2D:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CircleShape2D_wcg6j")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BossDamageArea/CollisionShape2D:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_2ktla"]
resource_name = "ShowSelf"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(520, -360), Vector2(520, 500)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MoveAnimation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"Start Phase One", -1, 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_v2p4m"]
resource_name = "Start Phase One"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 4.0001),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(520, 500), Vector2(150, 500), Vector2(150, 500)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MoveAnimation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"Phase One", -1, 1.0, false],
"method": &"play"
}]
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2ktla"]
radius = 248.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1ldon"]
radius = 146.0
height = 430.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a50fm"]
radius = 100.0
height = 500.0

[sub_resource type="Animation" id="Animation_xg512"]
resource_name = "Transitioning"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(520, 500), Vector2(520, -267), Vector2(520, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite/Body:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprite/Core:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("CircleShape2D_2ktla"), SubResource("CapsuleShape2D_1ldon")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0.0, 1.5708]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BossDamageArea/CollisionShape2D:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("CircleShape2D_wcg6j"), SubResource("CapsuleShape2D_a50fm")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BossDamageArea/CollisionShape2D:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0.0, 1.5708]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [3],
"method": &"change_state"
}]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 14.1372]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_40yy1"]
_data = {
&"Phase One": SubResource("Animation_wwxrc"),
&"RESET": SubResource("Animation_40yy1"),
&"ShowSelf": SubResource("Animation_2ktla"),
&"Start Phase One": SubResource("Animation_v2p4m"),
&"Transitioning": SubResource("Animation_xg512")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_wwd60"]
atlas = ExtResource("5_2ktla")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnbvi"]
atlas = ExtResource("5_2ktla")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1o43v"]
atlas = ExtResource("5_2ktla")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmjg6"]
atlas = ExtResource("5_2ktla")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xwgy"]
atlas = ExtResource("5_2ktla")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_expoy"]
atlas = ExtResource("5_2ktla")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n64cl"]
atlas = ExtResource("5_2ktla")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pxq2"]
atlas = ExtResource("5_2ktla")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg485"]
atlas = ExtResource("5_2ktla")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pqcb"]
atlas = ExtResource("5_2ktla")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8ydi"]
atlas = ExtResource("5_2ktla")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlfvf"]
atlas = ExtResource("5_2ktla")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr6tc"]
atlas = ExtResource("5_2ktla")
region = Rect2(768, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8ito"]
atlas = ExtResource("5_2ktla")
region = Rect2(832, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrb5e"]
atlas = ExtResource("5_2ktla")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7byp"]
atlas = ExtResource("5_2ktla")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1w5e"]
atlas = ExtResource("5_2ktla")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb2jn"]
atlas = ExtResource("5_2ktla")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhoyw"]
atlas = ExtResource("5_2ktla")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkftf"]
atlas = ExtResource("5_2ktla")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_knqe3"]
atlas = ExtResource("5_2ktla")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxqip"]
atlas = ExtResource("5_2ktla")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewkcm"]
atlas = ExtResource("5_2ktla")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxl24"]
atlas = ExtResource("5_2ktla")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxpep"]
atlas = ExtResource("5_2ktla")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1i61"]
atlas = ExtResource("5_2ktla")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlws2"]
atlas = ExtResource("5_2ktla")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrgkq"]
atlas = ExtResource("5_2ktla")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwxrc"]
atlas = ExtResource("2_2fuaw")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_40yy1"]
atlas = ExtResource("2_2fuaw")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2p4m"]
atlas = ExtResource("2_2fuaw")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ktla"]
atlas = ExtResource("2_2fuaw")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcg6j"]
atlas = ExtResource("2_2fuaw")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m11f0"]
atlas = ExtResource("2_2fuaw")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ldon"]
atlas = ExtResource("2_2fuaw")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a50fm"]
atlas = ExtResource("2_2fuaw")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg512"]
atlas = ExtResource("2_2fuaw")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnysc"]
atlas = ExtResource("2_2fuaw")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf0gj"]
atlas = ExtResource("2_2fuaw")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lny7f"]
atlas = ExtResource("2_2fuaw")
region = Rect2(704, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_v2p4m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwd60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnbvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1o43v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmjg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xwgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_expoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n64cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pxq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg485")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pqcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8ydi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlfvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr6tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8ito")
}],
"loop": false,
"name": &"Phase1explosion1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrb5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7byp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1w5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb2jn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhoyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkftf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knqe3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxqip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewkcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxl24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxpep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1i61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlws2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrgkq")
}],
"loop": false,
"name": &"Phase1explosion2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwxrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40yy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2p4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ktla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcg6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m11f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ldon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a50fm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg512")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnysc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf0gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lny7f")
}],
"loop": false,
"name": &"destroyed",
"speed": 10.0
}]

[node name="GeodeBoss" type="CharacterBody2D" groups=["Boss", "Enemy"]]
z_index = 2
position = Vector2(520, -360)
collision_layer = 2
collision_mask = 0
motion_mode = 1
script = ExtResource("1_wwxrc")

[node name="BodySprite" type="Node2D" parent="."]

[node name="Body" type="Sprite2D" parent="BodySprite"]
texture = ExtResource("1_1nh5t")

[node name="Core" type="Sprite2D" parent="BodySprite"]
visible = false
texture = ExtResource("2_wwxrc")

[node name="MoveAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_40yy1")
}

[node name="ExplosionAnim" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_v2p4m")
animation = &"Phase1explosion2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CircleShape2D_m11f0")

[node name="BossDamageArea" parent="." instance=ExtResource("3_wwxrc")]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossDamageArea"]
rotation = 1.5708
shape = SubResource("CircleShape2D_wcg6j")

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_40yy1")
bus = &"efx"

[node name="LeaserShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_v2p4m")
bus = &"efx"

[node name="RockShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_2ktla")
bus = &"efx"

[node name="TransitioningSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_m11f0")
bus = &"efx"

[node name="TransitionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_1ldon")
bus = &"efx"

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Marker2D" type="Marker2D" parent="."]

[node name="AttackSpawnPoint" type="Marker2D" parent="Marker2D"]
position = Vector2(216, 0)

[node name="LeaserContainer" type="Node" parent="."]

[connection signal="animation_finished" from="ExplosionAnim" to="." method="_on_explosion_anim_animation_finished"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_shoot_cooldown_timeout"]
